# Traffic-Violation-Recognition-Based-on-Yolov2-with-Hi3516-H3861

./: README.md  oc_demo.rar
ai_sample_cut/ai_sample_cut/: BUILD.gn  README.md
ai_sample_cut/ai_sample_cut/ai_infer_process/: ai_infer_process.c  ai_infer_process.h
ai_sample_cut/ai_sample_cut/dependency/: audio_test.c
ai_sample_cut/ai_sample_cut/ext_util/: base_interface.c  base_interface.h  misc_util.c  misc_util.h  posix_help.c  posix_help.h
ai_sample_cut/ai_sample_cut/interconnection_server/: hisignalling.c  hisignalling.h
ai_sample_cut/ai_sample_cut/jpeg/lib/: libjpeg.la  libjpeg.so.9
ai_sample_cut/ai_sample_cut/mpp_help/include/: ive_img.h  osd_img.h  vgs_img.h
ai_sample_cut/ai_sample_cut/mpp_help/src/: ive_img.c  osd_img.c  vgs_img.c
ai_sample_cut/ai_sample_cut/scenario/hand_classify/: hand_classify.c  hand_classify.h  hand_classify1.c  hand_classify2.c  hand_classify_0528_2036.c  hand_classify_0529_0159.c  hand_classify_0604_1653.c  hand_classify_0604_1954.c  hand_classify_0605_1334.c  hand_classify_0606_1224.c  hand_classify_initial.c  (+30 more)
ai_sample_cut/ai_sample_cut/smp/: sample_ai_main_initial.cpp  sample_media_ai.c  sample_media_ai.h  sample_media_ai_0605_0009.c  sample_media_ai_initial.c  sample_media_opencv.cpp
oc_demo/oc_demo/: BUILD.gn  app_demo_config.c  app_demo_config.h  app_demo_gl5537_1.c  app_demo_gl5537_1.h  app_demo_i2c_oled.c  app_demo_i2c_oled.h  app_demo_iot.c  app_demo_multi_sample.c  app_demo_multi_sample.h  app_demo_traffic_sample.c  app_demo_traffic_sample.h  hal_iot_adc.c  iot_adc.h  iot_config.h  iot_hmac.c  iot_hmac.h  iot_log.c  iot_log.h  iot_main.c  iot_main.h  iot_profile.c  iot_profile.h  iot_sta.c  ssd1306_oled.h  task_start.c  wifi_connecter.c  wifi_connecter.h
